resolve conflict
Signed-off-by: sevev <qiangzh95@gmail.com>